fix alignment

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -195,17 +195,12 @@ section.contact.flex-col
     text-align: right
 
 .special-thanks.flex-col
-    /* justify-content: center; */
-    align-items: center
+    justify-content: center
     margin-top: 20px
-    /* justify-content: space-evenly; */
     font-size: 12px
     color: gray
-    /* width: 100%; */
 
 .special-thanks h4.subheading
     text-align: center
     width: auto
     margin-bottom: 12px
-
-.special-thanks.flex-col
